[package]
name = "base-reth-call-with-logs-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-evm.workspace = true
reth-storage-api.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-eips.workspace = true

# op-alloy
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true

# rpc
jsonrpsee.workspace = true

# revm
revm.workspace = true
revm-database.workspace = true
revm-database-interface.workspace = true

# misc
tracing.workspace = true
serde.workspace = true
futures.workspace = true
hex.workspace = true
